[package]
name = "oniux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
caps = "0.5.5"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
ipc-channel = "0.19.0"
log = "0.4.25"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.21.0"
netlink-sys = "0.8.7"
nix = { version = "0.29.0", features = ["sched", "process", "fs", "mount"] }
onion-tunnel = { git = "https://gitlab.torproject.org/tpo/core/onionmasq.git" }
tokio = { version = "1.44.1", features = ["full"] }
