[package]
name = "oniux"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Isolate Applications over Tor using Linux Namespaces"
repository = "https://gitlab.torproject.org/tpo/core/oniux"
keywords = ["tor", "arti", "privacy", "anonymity"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1.0.95"
caps = "0.5.5"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.24.0"
netlink-sys = "0.8.7"
nix = { version = "0.30.1", features = ["sched", "process", "fs", "mount", "user"] }
onion-tunnel = { git = "https://gitlab.torproject.org/tpo/core/onionmasq.git" }
sendfd = "0.4.4"
smoltcp = { git = "https://gitlab.torproject.org/tpo/core/smoltcp.git" }
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"
