[package]
name = "oniux"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Isolate Applications over Tor using Linux Namespaces"
repository = "https://gitlab.torproject.org/tpo/core/oniux"
keywords = ["tor", "arti", "privacy", "anonymity"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1.0.95"
caps = "0.5.5"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.24.0"
netlink-sys = "0.8.7"
nix = { version = "0.30.1", features = ["sched", "process", "fs", "mount", "user"] }
#onion-tunnel = { git = "https://gitlab.torproject.org/tpo/core/onionmasq.git" }
onion-tunnel = { git = "https://gitlab.torproject.org/tpo/core/onionmasq.git", rev = "b869ac2" }
arti = { version = "1.4.3" , features = ["experimental-api"]}
sendfd = "0.4.4"
smoltcp = { git = "https://gitlab.torproject.org/tpo/core/smoltcp.git" }
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"

[patch.crates-io]
onion-tunnel = { git = "https://gitlab.torproject.org/tpo/core/onionmasq.git", rev = "b869ac2" }
arti = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
arti-client = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-config = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-rtcompat = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-linkspec = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-netdir = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-dirmgr = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-proto = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-llcrypto = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
tor-geoip = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
fs-mistrust = { git = "https://gitlab.torproject.org/trinity-1686a/arti.git", rev = "18cf78a" }
